コピータスク修正、セキュリティホール修正前

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "development": "node tasks/index.mjs development",
+    "dev": "node tasks/index.mjs development",
     "build": "node tasks/index.mjs build",
     "": "",
+    "build: html": "node tasks/index.mjs build_one html",
     "build: ejs": "node tasks/index.mjs build_one ejs",
+    "build: php": "node tasks/index.mjs build_one php",
+    "build: css": "node tasks/index.mjs build_one css",
     "build: sass": "node tasks/index.mjs build_one sass",
     "build: js": "node tasks/index.mjs build_one js",
     "build: img": "node tasks/index.mjs build_one img",
