--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sharp": "node tasks/sharp.mjs",
     "dev": "node tasks/index.mjs development",
     "build": "node tasks/index.mjs build",
+    "   ": "",
+    "sharp": "node tasks/sharp.mjs",
     "": "",
     "build: html": "node tasks/index.mjs build_one html",
     "build: ejs": "node tasks/index.mjs build_one ejs",
@@ -16,6 +17,7 @@
     "build: img": "node tasks/index.mjs build_one img",
     "build: font": "node tasks/index.mjs build_one font",
     " ": "",
+    "lint: html": "node tasks/index.mjs lint html",
     "lint: sass": "node tasks/index.mjs lint sass",
     "lint: js": "node tasks/index.mjs lint js",
     "  ": "",
@@ -39,7 +41,6 @@
     "del": "^7.1.0",
     "ejs": "^3.1.9",
     "esbuild": "^0.19.3",
-    "eslint": "^8.49.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-html": "^7.1.0",
     "glob": "^10.3.3",
@@ -52,6 +53,8 @@
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
     "imagemin-webp": "^8.0.0",
+    "js-beautify": "^1.15.1",
+    "markuplint": "^4.3.0",
     "path": "^0.12.7",
     "prettier": "^3.0.3",
     "sass": "^1.67.0",
